Fix UI glitches

--- a/language/admin/de-DE.com_nokmybusiness.ini
+++ b/language/admin/de-DE.com_nokmybusiness.ini
@@ -175,6 +175,8 @@ COM_NOKMYBUSINESS_USER_EDIT_ALLOW_COLUMNS_DESC="Spalten, welche der berechtigte 
 COM_NOKMYBUSINESS_USER_EDIT_ALLOW_COLUMNS_LABEL="Erlaubte Spalten"
 COM_NOKMYBUSINESS_USER_EDIT_ALLOW_DESC="D&uuml;rfen berechtigte Benutzer die Datens&auml;tze selbst &auml;ndern."
 COM_NOKMYBUSINESS_USER_EDIT_ALLOW_LABEL="Benutzer-&Auml;nderung erlauben"
+COM_NOKMYBUSINESS_ACTIVE="Aktiv"
+COM_NOKMYBUSINESS_INACTIVE="Inaktiv"
 
 ;Columns
 COM_NOKMYBUSINESS_COLUMN_10_DESC="Feld ausw&auml;hlen, dass angezeigt werden soll in Spalte 10."
