--- a/language/admin/en-GB.com_nokmybusiness.ini
+++ b/language/admin/en-GB.com_nokmybusiness.ini
@@ -175,6 +175,8 @@ COM_NOKMYBUSINESS_USER_EDIT_ALLOW_DESC="Allow user to change their own records."
 COM_NOKMYBUSINESS_USER_EDIT_ALLOW_LABEL="Allow user changes"
 COM_NOKMYBUSINESS_LINK_NR="Link %s"
 COM_NOKMYBUSINESS_LINK="Link"
+COM_NOKMYBUSINESS_ACTIVE="Active"
+COM_NOKMYBUSINESS_INACTIVE="Inactive"
 
 ;Columns
 COM_NOKMYBUSINESS_COLUMN_10_DESC="Select which field should be displayed in column 10."
