Add translation Multiple fixes

--- a/language/admin/de-DE.com_nokmybusiness.ini
+++ b/language/admin/de-DE.com_nokmybusiness.ini
@@ -104,6 +104,44 @@ COM_NOKMYBUSINESS_CUSTOMERS_TAB_COMMUNICATION="Kommunikation"
 COM_NOKMYBUSINESS_CUSTOMERS_TAB_CUSTOM_AND_RECORDINFO="Benutzerdefinierte Felder & Datensatz-Info"
 COM_NOKMYBUSINESS_CUSTOMERS_TITLE="Liste der Kunden"
 
+;Product
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CATID_LABEL="Kategorie"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CATID_DESC="Kategorie des Produktes."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDBY_LABEL="Erstellt von"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDBY_DESC="Benutzer welcher den Datensatz erstellt hat."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_LABEL="Erstellt am"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_DESC="Datum wann der Datensatz erstellt wurde."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_LABEL="Beschreibung"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_DESC="Beschreibung zum Produkt"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_LABEL="Ver&auml;ndert von"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_DESC="Benutzer der als Letzter den Datensatz ver&auml;ndert hat."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_LABEL="Ver&auml;ndert am"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_DESC="Datum und Uhrzeit als der Datensatz zum letzten Mal ver&auml;ndert wurde."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_LABEL="Name"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_DESC="Name des Produktes. Dieser muss eindeutig sein!"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_LABEL="Bild"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_DESC="Bild des Produktes."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_LABEL="Preis"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_DESC="Preis des Produktes."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_LABEL="Ver&ouml;ffentlicht"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_DESC="Dieses Produkt ist öffentlich sichtbar."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_LABEL="Status"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_DESC="Status des Produktes."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_LABEL="Bestand"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_DESC="Lagerbestand des Produktes"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_LABEL="Mwst."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_DESC="Mehrwert-Steuer auf dieses Produkt."
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_ERROR="Bitte wählen Sie die zu importierende Datei!"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_TITLE="Import von Produktedaten aus einer Datei"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_FILE_LABEL="Datei mit den Produkte-Daten"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_ENCODING_LABEL="Zeichensatz"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_BUTTON="Import starten"
+COM_NOKMYBUSINESS_PRODUCTS_PAGE_ADD="Produkt hinzuf&uuml;gen"
+COM_NOKMYBUSINESS_PRODUCTS_PAGE_EDIT="Produkt &auml;ndern"
+COM_NOKMYBUSINESS_PRODUCTS_TAB_COMMON="Allgemeines"
+COM_NOKMYBUSINESS_PRODUCTS_TAB_RECORDINFO="Datensatz-Info"
+COM_NOKMYBUSINESS_PRODUCTS_TITLE="Liste der Produkte"
+
 ;Category
 COM_NOKMYBUSINESS_CATEGORIES_FIELD_TITLE_LABEL="Kategorie Titel"
 COM_NOKMYBUSINESS_CATEGORIES_FIELD_ALIAS_LABEL="Kategorie Alias"
