--- a/language/admin/en-GB.com_nokmybusiness.ini
+++ b/language/admin/en-GB.com_nokmybusiness.ini
@@ -98,13 +98,51 @@ COM_NOKMYBUSINESS_CUSTOMERS_IMPORT_ENCODING_LABEL="Encoding"
 COM_NOKMYBUSINESS_CUSTOMERS_IMPORT_FILE_LABEL="Customer data file"
 COM_NOKMYBUSINESS_CUSTOMERS_IMPORT_TITLE="Import customer data from file"
 COM_NOKMYBUSINESS_CUSTOMERS_IMPORT_ERROR="Please select a file to import"
-COM_NOKMYBUSINESS_CUSTOMERS_PAGE_ADD="Add customers"
-COM_NOKMYBUSINESS_CUSTOMERS_PAGE_EDIT="Edit customers"
+COM_NOKMYBUSINESS_CUSTOMERS_PAGE_ADD="Add customer"
+COM_NOKMYBUSINESS_CUSTOMERS_PAGE_EDIT="Edit customer"
 COM_NOKMYBUSINESS_CUSTOMERS_TAB_COMMON="Common"
 COM_NOKMYBUSINESS_CUSTOMERS_TAB_ADDRESS="Address"
 COM_NOKMYBUSINESS_CUSTOMERS_TAB_COMMUNICATION="Communication"
 COM_NOKMYBUSINESS_CUSTOMERS_TAB_CUSTOM_AND_RECORDINFO="Custom fields & record info"
 COM_NOKMYBUSINESS_CUSTOMERS_TITLE="List of customers"
+
+;Product
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CATID_LABEL="Category"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CATID_DESC="Category of the product."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDBY_LABEL="Created by"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDBY_DESC="User which created this record."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_LABEL="Created date"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_DESC="Date when the record was created."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_LABEL="Description"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_DESC="Description of the product."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_LABEL="Modified by"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_DESC="User which modified the record last time."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_LABEL="Modified date"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_DESC="Date/Time when the record was modified the last time."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_LABEL="Name"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_DESC="Name"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_LABEL="Picture"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_DESC="Picture"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_LABEL="Price"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_DESC="Price"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_LABEL="Published"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_DESC="Product is published to the public."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_LABEL="Status"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_DESC="Status"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_LABEL="Stock"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_DESC="Stock"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_LABEL="VAT"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_DESC="Value-Added Tax"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_ERROR="Please select a file to import"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_TITLE="Import product data from file"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_FILE_LABEL="Please select a file to import"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_ENCODING_LABEL="Encoding"
+COM_NOKMYBUSINESS_PRODUCTS_IMPORT_BUTTON="Start import"
+COM_NOKMYBUSINESS_PRODUCTS_PAGE_ADD="Add product"
+COM_NOKMYBUSINESS_PRODUCTS_PAGE_EDIT="Edit producs"
+COM_NOKMYBUSINESS_PRODUCTS_TAB_COMMON="Common"
+COM_NOKMYBUSINESS_PRODUCTS_TAB_RECORDINFO="Record info"
+COM_NOKMYBUSINESS_PRODUCTS_TITLE="List of products"
 
 ;Category
 COM_NOKMYBUSINESS_CATEGORIES_FIELD_TITLE_LABEL="Category Title"
