Add categories Add more fields to product

--- a/language/admin/de-DE.com_nokmybusiness.ini
+++ b/language/admin/de-DE.com_nokmybusiness.ini
@@ -9,6 +9,7 @@
 ;Menu
 COM_NOKMYBUSINESS_MENU_CUSTOMERS="Kunden"
 COM_NOKMYBUSINESS_MENU_PRODUCTS="Produkte"
+COM_NOKMYBUSINESS_MENU_CATEGORIES="Kategorien"
 
 ;Toolbar
 JTOOLBAR_IMPORT="Import"
@@ -113,22 +114,32 @@ COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_LABEL="Erstellt am"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_DESC="Datum wann der Datensatz erstellt wurde."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_LABEL="Beschreibung"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_DESC="Beschreibung zum Produkt"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DIMENSIONS_LABEL="Abmessungen"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DIMENSIONS_DESC="Abmessungen des Produktes."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_LABEL="Ver&auml;ndert von"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_DESC="Benutzer der als Letzter den Datensatz ver&auml;ndert hat."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_LABEL="Ver&auml;ndert am"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_DESC="Datum und Uhrzeit als der Datensatz zum letzten Mal ver&auml;ndert wurde."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_LABEL="Name"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_DESC="Name des Produktes. Dieser muss eindeutig sein!"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NUMBER_LABEL="Artikelummer"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NUMBER_DESC="Artikelummer des Produktes."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_LABEL="Bild"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_DESC="Bild des Produktes."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_POWER_LABEL="Leistung"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_POWER_DESC="Leistung des Produktes."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_LABEL="Preis"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_DESC="Preis des Produktes."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PROTECTION_LABEL="Schutzklassen"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PROTECTION_DESC="Schutzklassen des Produktes."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_LABEL="Ver&ouml;ffentlicht"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_DESC="Dieses Produkt ist öffentlich sichtbar."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_SHORTTEXT_LABEL="Artikelbezeichnung"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_SHORTTEXT_DESC="Artikelbezeichnung des Produktes."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_LABEL="Status"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_DESC="Status des Produktes."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_LABEL="Bestand"
-COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_DESC="Lagerbestand des Produktes"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_DESC="Lagerbestand des Produktes."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_LABEL="Mwst."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_DESC="Mehrwert-Steuer auf dieses Produkt."
 COM_NOKMYBUSINESS_PRODUCTS_IMPORT_ERROR="Bitte wählen Sie die zu importierende Datei!"
