--- a/language/admin/en-GB.com_nokmybusiness.ini
+++ b/language/admin/en-GB.com_nokmybusiness.ini
@@ -9,6 +9,7 @@
 ;Menu
 COM_NOKMYBUSINESS_MENU_CUSTOMERS="Customers"
 COM_NOKMYBUSINESS_MENU_PRODUCTS="Products"
+COM_NOKMYBUSINESS_MENU_CATEGORIES="Categories"
 
 ;Toolbar
 JTOOLBAR_IMPORT="Import"
@@ -115,24 +116,34 @@ COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_LABEL="Created date"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDDATE_DESC="Date when the record was created."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_LABEL="Description"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_DESCRIPTION_DESC="Description of the product."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DIMENSIONS_LABEL="Dimensions"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_DIMENSIONS_DESC="Dimensions of the product."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_LABEL="Modified by"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDBY_DESC="User which modified the record last time."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_LABEL="Modified date"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_MODIFIEDDATE_DESC="Date/Time when the record was modified the last time."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_LABEL="Name"
-COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_DESC="Name"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NAME_DESC="Name of the product."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NUMBER_LABEL="Number"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_NUMBER_DESC="Number of the product."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_LABEL="Picture"
-COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_DESC="Picture"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_DESC="Picture of the product."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_POWER_LABEL="Power"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_POWER_DESC="Power of the product."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_LABEL="Price"
-COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_DESC="Price"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_DESC="Price of the product."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PROTECTION_LABEL="Protection classes"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_PROTECTION_DESC="Protection classes of the product."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_LABEL="Published"
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_PUBLISHED_DESC="Product is published to the public."
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_SHORTTEXT_LABEL="Short text"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_SHORTTEXT_DESC="Short text of the product."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_LABEL="Status"
-COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_DESC="Status"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STATUS_DESC="Status of the product."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_LABEL="Stock"
-COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_DESC="Stock"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_DESC="Stock of the product."
 COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_LABEL="VAT"
-COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_DESC="Value-Added Tax"
+COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_DESC="Value-Added Tax of the product."
 COM_NOKMYBUSINESS_PRODUCTS_IMPORT_ERROR="Please select a file to import"
 COM_NOKMYBUSINESS_PRODUCTS_IMPORT_TITLE="Import product data from file"
 COM_NOKMYBUSINESS_PRODUCTS_IMPORT_FILE_LABEL="Please select a file to import"
